corpus/single
==================
single block with some text on a single line
==================
task: test singe line
---
(source_file
    (block
        (header (standard_header (identifier)))
        (text)))

==================
multiple blocks with some text on a single line
==================
task: thing to do
idea: some idea
later: for later
---

(source_file
    (block
        (header (standard_header (identifier)))
        (text))
    (block
        (header (standard_header (identifier)))
        (text))
    (block
        (header (standard_header (identifier)))
        (text)))


==================
single block with some text on a single line and a category header section
==================
task[foorbar,bazz]: test singe line
---
(source_file
    (block (header
        (category_header (identifier)
            (categories
                (category (category_identifier))
                (category (category_identifier)))))
        (text)))

==================
multiple blocks with some text on a single line and a category header section
==================
task[foorbar,bazz]: test singe line
task[other,fizz,]: test singe line.. hah trailing comma
---
(source_file
    (block (header
        (category_header (identifier)
            (categories
                (category (category_identifier))
                (category (category_identifier)))))
        (text))
    (block (header
        (category_header (identifier)
            (categories
                (category (category_identifier))
                (category (category_identifier)))))
        (text)))


